Test with coverage report and auto upload to codecov.io

--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,11 @@
+test:
+  override:
+    - sbt clean coverage test:test coverageReport
+  post:
+    - bash <(curl -s https://codecov.io/bash)
+
 deployment:
-  prod:
+  production:
     branch: master
     commands:
       - sbt "+ publish"
