--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,22 @@ project/plugins/project/
 .scala_dependencies
 .worksheet
 
+# User specific settings
+.idea/tasks.xml
+.idea/workspace.xml
+
+# Sensitive or high-churn files
+.idea/dataSources/
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/dataSources.local.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
+
+# Gradle:
+.idea/gradle.xml
+.idea/libraries
+
+# File-based project format
+*.iws
