--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,7 @@
+machine:
+  java:
+    version: oraclejdk8
+
 dependencies:
   pre:
     - sudo rsync -r --include=*/ --include=*.jar --exclude=* .jre $JAVA_HOME
