--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ machine:
 
 dependencies:
   pre:
-    - sudo rsync -r --include=*/ --include=*.jar --exclude=* .jre $JAVA_HOME
+    - sudo rsync -r --include=*/ --include=*.jar --exclude=* .jdk/jre $JAVA_HOME
 
 test:
   override:
